tests/integration/traits/errors/extra-method/main.cx
trait C {
}

impl C Number {
  x = 1
}
